新增:header模板、登入判斷status欄位

--- a/src/main/resources/templates/front/index.html
+++ b/src/main/resources/templates/front/index.html
@@ -8,7 +8,11 @@
 <title>首頁</title>
 </head>
 <body>
-<h1>歡迎來到tkbeat</h1>
+<!-- header -->
+<body th:include="/share/header::header"></body>
+<!-- header -->
+
+
 
 
 
