--- a/src/main/resources/templates/front/login/login.html
+++ b/src/main/resources/templates/front/login/login.html
@@ -6,8 +6,17 @@
 <head th:include="/share/common-css::common-css"></head>
 <!-- static-resource -->
 <title>登入</title>
+<style>
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+</style>
 </head>
 <body class="text-center">
+<div class="container">
   <form class="form-signin" method="post" action="/login">
       <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
@@ -21,9 +30,9 @@
         </label>
       </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+      <p class="mt-5 mb-3 text-muted">&copy; TKB-2021</p>
     </form>
-
+</div>
 
 
 
